section recent project edited

--- a/index.html
+++ b/index.html
@@ -50,27 +50,35 @@
     </div>
 </section>
 <section class="myProjects">
+    <h2 class="rprojh2">Recent Projects</h2>
     <div class="recentProjects">
-        <h2 class="rprojh2">Recent Projects</h2>
         <div class="proj">
-            <h3>Project 1</h3>
+            <div>
+                 <h3>Project 1</h3>
+                 <p>Remain to be filled with content in the future.</p>
+            </div>
             <img src="projectsimg.jpg" alt="projectnr1">
         </div>
         <div class="proj">
-            <h3>Project 2</h3>
+            <div>
+                <h3>Project 2</h3>
+                <p>Remain to be filled with content in the future.</p>
+            </div>
             <img src="projectsimg.jpg" alt="projectnr2">
         </div>
         <div class="proj">
-            <h3>Project 3</h3>
+            <div>
+                <h3>Project 3</h3>
+                <p>Remain to be filled with content in the future.</p>
+            </div>
             <img src="projectsimg.jpg" alt="projectnr3">
         </div>
         <div class="proj">
-            <h3>Project 4</h3>
+            <div>
+                <h3>Project 4</h3>
+                <p>Remain to be filled with content in the future.</p>
+            </div>
             <img src="projectsimg.jpg" alt="projectnr4">
-        </div>
-        <div class="proj">
-            <h3>Project 5</h3>
-            <img src="projectsimg.jpg" alt="projectnr5">
         </div>
     </div>
 </section>
