--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
           integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -56,6 +57,7 @@
             <div>
                  <h3>Project 1</h3>
                  <p>Remain to be filled with content in the future.</p>
+                 <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub" class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
             <img src="projectsimg.jpg" alt="projectnr1">
         </div>
@@ -63,6 +65,7 @@
             <div>
                 <h3>Project 2</h3>
                 <p>Remain to be filled with content in the future.</p>
+                <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub" class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
             <img src="projectsimg.jpg" alt="projectnr2">
         </div>
@@ -70,6 +73,7 @@
             <div>
                 <h3>Project 3</h3>
                 <p>Remain to be filled with content in the future.</p>
+                <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub" class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
             <img src="projectsimg.jpg" alt="projectnr3">
         </div>
@@ -77,6 +81,7 @@
             <div>
                 <h3>Project 4</h3>
                 <p>Remain to be filled with content in the future.</p>
+                <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub" class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
             <img src="projectsimg.jpg" alt="projectnr4">
         </div>
