--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
 <nav>
@@ -70,6 +69,7 @@
         <div class="proj">
             <div>
                  <h3>Project 1</h3>
+                 <a href="project1.html"><i class='bx bx-folder-open' ></i></a>
                  <p>Remain to be filled with content in the future.</p>
                  <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub" class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
@@ -78,6 +78,7 @@
         <div class="proj">
             <div>
                 <h3>Project 2</h3>
+                <a href="project2.html"><i class='bx bx-folder-open' ></i></a>
                 <p>Remain to be filled with content in the future.</p>
                 <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub" class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
@@ -86,6 +87,7 @@
         <div class="proj">
             <div>
                 <h3>Project 3</h3>
+                <a href="project3.html"><i class='bx bx-folder-open' ></i></a>
                 <p>Remain to be filled with content in the future.</p>
                 <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub" class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
@@ -94,6 +96,7 @@
         <div class="proj">
             <div>
                 <h3>Project 4</h3>
+                <a href="project4.html"><i class='bx bx-folder-open' ></i></a>
                 <p>Remain to be filled with content in the future.</p>
                 <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub" class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
