--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
     <title>Fulop Emy - Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
           integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -31,7 +31,7 @@
         <a href="#" class="navRight">Home</a>
         <a href="#about" class="navRight">About Me</a>
         <a href="#recent" class="navRight">Projects</a>
-        <a href="#" class="navRight">Contact</a>
+        <a href="#contact" class="navRight">Contact</a>
     </div>
 </nav>
 <header>
@@ -103,6 +103,13 @@
             <img src="projectsimg.jpg" alt="projectnr4">
         </div>
     </div>
+</section>
+<section>
+    <a class="anchor" id="contact"></a>
+    <h2 class="contact">Contact me</h2>
+    <p>If you'd like to get in touch, feel free to <a class="mailmeLink" href="mailto:f.emeric.emy@gmail.com?subject=Let's work together">drop me an email </a> or
+        contact me through <a class="contactform" href="contactform.html"> contact form</a>.
+        If you'd like to see more of the projects that I have contributed to, take a look at my GitHub</p>
 </section>
 
 </body>
