adding contact form external

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
         </div>
     </div>
 </section>
-<section>
+<section class="contactme">
     <a class="anchor" id="contact"></a>
     <h2 class="contact">Contact me</h2>
     <p>If you'd like to get in touch, feel free to <a class="mailmeLink" href="mailto:f.emeric.emy@gmail.com?subject=Let's work together">drop me an email </a> or
         contact me through <a class="contactform" href="contactform.html"> contact form</a>.
-        If you'd like to see more of the projects that I have contributed to, take a look at my GitHub</p>
+        If you'd like to see more of the projects that I have contributed to, take a look at my <a class="gitlink" href="https://github.com/FE-Emy/portofolio">GitHub</a></p>
 </section>
 
 </body>
