index.html code review

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ to link to it-->
 <section>
     <div class="aboutME">
         <h2 class="haboutme">About me</h2>
+
+<!--        Maybe call this "aboutMeFlexContainer"-->
         <div class="flexContainer">
             <div>
                 <p class="paboutme">I am currently enrolled on the <a
@@ -82,8 +84,13 @@ to link to it-->
         </div>
     </div>
 </section>
+
+<!--Again, no need to do this, just add the "recent" id to the section below-->
 <a class="anchor" id="recent"></a>
 <section class="myProjects">
+
+<!--    Names like "rprojh2" might be easy for you to understand, but would be-->
+<!--    harder for other people to figure out!-->
     <h2 class="rprojh2">Recent Projects</h2>
     <div class="recentProjects">
         <div class="proj">
@@ -132,6 +139,8 @@ to link to it-->
 <section class="contactme">
     <a class="anchor" id="contact"></a>
     <h2 class="contact">Contact me</h2>
+
+<!--    The "drop me an email" link could be better indented to make it clearer-->
     <p>If you'd like to get in touch, feel free to <a class="mailmeLink"
                                                       href="mailto:f.emeric.emy@gmail.com?subject=Let's work together">drop
         me an email </a> or
