--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="flexContainer">
             <div>
                 <p class="paragraphAboutMe">I am currently enrolled on the <a
-                        href="https://io-academy.uk/courses/full-stack-track/">Full-Stack Track</a> at <a
-                        href="https://io-academy.uk/">iO Academy</a> ,in Bath.</br>
+                        href="https://io-academy.uk/courses/full-stack-track/" target="blank">Full-Stack Track</a> at <a
+                        href="https://io-academy.uk/" target="blank">iO Academy</a> ,in Bath.</br>
                     I am hoping to graduate with enough knowledge to jump right into a </br>junior web developer role.
                 </p>
                 <p class="paragraphAboutMe"></p>
@@ -63,9 +63,9 @@
         <div class="projects">
             <div>
                 <h3>Project 1</h3>
-                <a href="project1.html"><i class='bx bx-folder-open'></i></a>
+                <a href="project1.html" target="blank"><i class='bx bx-folder-open'></i></a>
                 <p>Remain to be filled with content in the future.</p>
-                <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub"
+                <a href="https://github.com/FE-Emy/portofolio" target="blank" title="View on GitHub"
                    class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
             <img src="img/projectsimg.jpg" alt="projectnr1">
@@ -73,9 +73,9 @@
         <div class="projects">
             <div>
                 <h3>Project 2</h3>
-                <a href="project1.html"><i class='bx bx-folder-open'></i></a>
+                <a href="project1.html" target="blank"><i class='bx bx-folder-open'></i></a>
                 <p>Remain to be filled with content in the future.</p>
-                <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub"
+                <a href="https://github.com/FE-Emy/portofolio" target="blank" title="View on GitHub"
                    class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
             <img src="img/projectsimg.jpg" alt="projectnr2">
@@ -83,9 +83,9 @@
         <div class="projects">
             <div>
                 <h3>Project 3</h3>
-                <a href="project1.html"><i class='bx bx-folder-open'></i></a>
+                <a href="project1.html" target="blank"><i class='bx bx-folder-open'></i></a>
                 <p>Remain to be filled with content in the future.</p>
-                <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub"
+                <a href="https://github.com/FE-Emy/portofolio" target="blank" title="View on GitHub"
                    class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
             <img src="img/projectsimg.jpg" alt="projectnr3">
@@ -93,9 +93,9 @@
         <div class="projects">
             <div>
                 <h3>Project 4</h3>
-                <a href="project1.html"><i class='bx bx-folder-open'></i></a>
+                <a href="project1.html" target="blank"><i class='bx bx-folder-open'></i></a>
                 <p>Remain to be filled with content in the future.</p>
-                <a href="https://github.com/FE-Emy/portofolio" target="_blank" title="View on GitHub"
+                <a href="https://github.com/FE-Emy/portofolio" target="blank" title="View on GitHub"
                    class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
             <img src="img/projectsimg.jpg" alt="projectnr4">
@@ -108,9 +108,9 @@
     </div>
     <div>
     <p>If you'd like to get in touch, feel free to email me at f.emeric.emy@gmail.com or
-        contact me through <a class="contactform" href="contactform.html"> contact form </a>.
-        If you'd like to see more of the projects that I have contributed to, take a look at my
-        <a class="gitlink" href="https://github.com/FE-Emy/portofolio">GitHub</a></p>
+        contact me through&nbsp;<a href="contactform.html" target="blank">contact form.</a>
+        If you'd like to see more of the projects that I have contributed to,take a look at my&nbsp;
+        <a href="https://github.com/FE-Emy/portofolio" target="blank">GitHub</a></p>
     </div>
     <section class="copyright">
         <div>
