--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<nav>
+<nav id="top">
     <div class=navbarLogo>
-        <img src="img/iologo.svg">
+        <img src="img/iologo.svg" alt="ioLogo">
     </div>
     <div class="navbar">
         <a href="#"><i class='bx bx-code-alt'></i>Home</a>
@@ -28,7 +28,7 @@
         <p class="headerParagraph">I am a fullstack developer located in Germany,DE</p>
         <div class="headerLinks">
             <a class="mailMeLink" href="mailto:f.emeric.emy@gmail.com?subject=Let's work together">Mail Me</a>
-            <a class="gtkm" href="#about">Get to know me</a>
+            <a class="getToKnowMe" href="#about">Get to know me</a>
         </div>
     </div>
 </header>
@@ -39,8 +39,8 @@
             <div>
                 <p class="paragraphAboutMe">I am currently enrolled on the <a
                         href="https://io-academy.uk/courses/full-stack-track/" target="blank">Full-Stack Track</a> at <a
-                        href="https://io-academy.uk/" target="blank">iO Academy</a> ,in Bath.</br>
-                    I am hoping to graduate with enough knowledge to jump right into a </br>junior web developer role.
+                        href="https://io-academy.uk/" target="blank">iO Academy</a> ,in Bath.<br>
+                    I am hoping to graduate with enough knowledge to jump right into a <br>junior web developer role.
                 </p>
                 <p class="paragraphAboutMe"></p>
                 <p class="paragraphAboutMe">I will be learning <b>HTML</b>,<b>CSS</b> and <b>Javascript</b> for
@@ -52,7 +52,7 @@
                 <i class='bx bxl-nodejs'></i>
             </div>
             <div>
-            <img class="profilepic" src="img/profilpic.png" alt="profilepicture">
+            <img class="profilePicture" src="img/profilpic.png" alt="profilepicture">
             </div>
         </div>
     </div>
