--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <div class="projects">
             <div>
                 <h3>Project 1</h3>
-                <a href="project1.html" target="blank"><i class='bx bx-folder-open'></i></a>
+                <a href="addProject.html" target="blank"><i class='bx bx-folder-open'></i></a>
                 <p>Remain to be filled with content in the future.</p>
-                <a href="https://github.com/FE-Emy/portofolio" target="blank" title="View on GitHub"
+                <a href="https://github.com/FE-Emy/" target="blank" title="View on GitHub"
                    class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
             <img src="img/projectsimg.jpg" alt="projectnr1">
@@ -73,9 +73,9 @@
         <div class="projects">
             <div>
                 <h3>Project 2</h3>
-                <a href="project1.html" target="blank"><i class='bx bx-folder-open'></i></a>
+                <a href="addProject.html" target="blank"><i class='bx bx-folder-open'></i></a>
                 <p>Remain to be filled with content in the future.</p>
-                <a href="https://github.com/FE-Emy/portofolio" target="blank" title="View on GitHub"
+                <a href="https://github.com/FE-Emy/" target="blank" title="View on GitHub"
                    class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
             <img src="img/projectsimg.jpg" alt="projectnr2">
@@ -83,9 +83,9 @@
         <div class="projects">
             <div>
                 <h3>Project 3</h3>
-                <a href="project1.html" target="blank"><i class='bx bx-folder-open'></i></a>
+                <a href="addProject.html" target="blank"><i class='bx bx-folder-open'></i></a>
                 <p>Remain to be filled with content in the future.</p>
-                <a href="https://github.com/FE-Emy/portofolio" target="blank" title="View on GitHub"
+                <a href="https://github.com/FE-Emy/" target="blank" title="View on GitHub"
                    class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
             </div>
             <img src="img/projectsimg.jpg" alt="projectnr3">
@@ -93,7 +93,7 @@
         <div class="projects">
             <div>
                 <h3>Project 4</h3>
-                <a href="project1.html" target="blank"><i class='bx bx-folder-open'></i></a>
+                <a href="addProject.html" target="blank"><i class='bx bx-folder-open'></i></a>
                 <p>Remain to be filled with content in the future.</p>
                 <a href="https://github.com/FE-Emy/portofolio" target="blank" title="View on GitHub"
                    class="projectLink"><i class='bx bxl-github'></i>&nbsp;View on GitHub</a>
